Updated homepage address at package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sunnyside-agency-landing-page",
-  "homepage": "http://rizky-pm.github.io/fm_sunnyside_landing-page",
+  "homepage": "https://rizky-pm.github.io/fm_sunnyside_landing-page/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
